# json-typedef-rust

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: serde_schema_try_into.rs  validate.rs
src/: form.rs  lib.rs  schema.rs  serde.rs  serde_schema.rs  validate.rs  validator.rs
