[package]
name = "jtd"
version = "0.3.1"
description = "A Rust implementation of JSON Type Definition"
authors = ["JSON Type Definition Contributors"]
edition = "2018"
license = "MIT"

[dependencies]
chrono = { version = "0.4", features = ["std", "clock", "wasmbind"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
